<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/fragment_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin">


            <TextView
                android:id="@+id/app_name"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toTopOf="@+id/about_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/button_margin"
                android:gravity="center_horizontal"
                android:text="@string/about_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/divider1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_name" />

            <View
                android:id="@+id/divider1"
                style="@style/Divider.Horizontal"
                android:layout_margin="@dimen/button_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_title" />

            <TextView
                android:id="@+id/author_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:paddingEnd="@dimen/button_margin"
                android:text="@string/author_title_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />


            <TextView
                android:id="@+id/author_eMail_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:gravity="center|start"
                android:text="@string/author_eMail_1"
                app:layout_constraintStart_toEndOf="@id/barrier_v1"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <TextView
                android:id="@+id/author_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:paddingEnd="@dimen/button_margin"
                android:text="@string/author_title_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author_title_1" />


            <TextView
                android:id="@+id/author_eMail_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:gravity="center|start"
                android:text="@string/author_eMail_2"
                app:layout_constraintStart_toEndOf="@id/barrier_v1"
                app:layout_constraintTop_toBottomOf="@+id/author_eMail_1" />


            <View
                android:id="@+id/divider2"
                style="@style/Divider.Horizontal"
                android:layout_margin="@dimen/button_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author_eMail_2" />


            <Button
                android:id="@+id/visit_me_at_google_play_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"

                android:text="@string/visit_me_at_google_play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />


            <Button
                android:id="@+id/rate_this_app_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"

                android:text="@string/rate_this_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/visit_me_at_google_play_button" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="author_title_1,author_title_2"
                tools:layout_editor_absoluteX="113dp" />





        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</androidx.core.widget.NestedScrollView >